--- a/popup.css
+++ b/popup.css
@@ -9,6 +9,27 @@
     font-size: 24px;
     margin-bottom: 20px;
   }
+
+  form {
+    margin-top: 20px;
+  }
+  
+  label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+  }
+  
   
   button {
     background-color: #0078d4;
